Add build script

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,9 @@
     <title></title>
   </head>
   <body>
-    <div id="elm-content"></div>
-    <script type="text/javascript" src="elm.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
     <script type="text/javascript">
-      var div = document.getElementById('elm-content');
-      Elm.fullscreen(Elm.Main, {});
+      Elm.Main.fullscreen();
     </script>
   </body>
 </html>
