--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,13 @@
         }, 700);
 
       });
+
+      app.ports.abortDebouncedMessage.subscribe(function(){
+        if (timed) {
+          clearTimeout(timed);
+        }
+      });
+
     </script>
   </body>
 </html>
